--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 
             </select>  <br/> 
 
-            <button onclick="compute()">Compute</button> <br/> 
+            <button onclick="compute()">Compute interest</button> <br/> 
             <span id="result">
 
             </span>
