--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 
-    <title>Simple Interest Calculator</title>
+    <title>Web App – Simple Interest Calculator</title>
     </head>
     <body onload="loadBody()">
         <div class="maindiv"> 
