--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <div class="maindiv"> 
             <h1>Simple Interest Calculator</h1>
 
-            Amount <input type="number"  id="principal">  <br/>
+            Amount <input type="number"  id="principal" value="100000">  <br/>
             Rate <input type="range"  id="rate" min="1" max="20" step = "0.25" value="10.25" onchange="updateRate()"> <span id="rate_val">10.25%</span><br/>
             No. of Years <select id="years">
                 
             </select>  <br/> 
 
-            <button onclick="compute()">Compute interest</button> <br/> 
+            <button onclick="compute()">Compute interest</button> <button onclick="reset()">Reset</button> <br/> 
             <span id="result">
 
             </span>
